@@ -1,3 +1,8 @@
+2000-08-15  Bart Schaefer  <schaefer@zsh.org>
+
+	* 12652: Src/module.c: Fix variable scoping problem that caused
+	crash in `zmodload -u'.
+
 2000-08-15  Sven Wischnowsky  <wischnow@zsh.org>
 
 	* 12640: Completion/Builtins/_pids, Completion/Builtins/_zstyle,
